--- a/site/themes/template/layouts/partials/base-footer.html
+++ b/site/themes/template/layouts/partials/base-footer.html
@@ -5,13 +5,13 @@
         <li>
           <a target="_blank" rel="noopener" href="{{ .Site.Params.twitter_url }}"
             title="X. This link will open in a new tab">
-            <img class="logo" src="/img/twitter.svg" alt="X logo" />
+            <img class="logo" src="img/twitter.svg" alt="X logo" />
             X</a>
         </li>
         <li>
           <a target="_blank" rel="noopener" href="{{ .Site.Params.github_url }}"
             title="GitHub. This link will open in a new tab">
-            <img class="logo" src="/img/github.svg" alt="GitHub logo" />
+            <img class="logo" src="img/github.svg" alt="GitHub logo" />
             <span class="desktop">GitHub</span>
             <span class="mobile">GitHub</span>
           </a>
@@ -19,7 +19,7 @@
         <li>
           <a target="_blank" rel="noopener" href="{{ .Site.Params.slack_url }}"
             title="Slack. This link will open in a new tab">
-            <img class="logo" src="/img/slack.svg" alt="Slack logo">
+            <img class="logo" src="img/slack.svg" alt="Slack logo">
             <span class="desktop">Slack</span>
             <span class="mobile">Slack</span>
           </a>
@@ -28,7 +28,7 @@
       <div class="right-links">
         <p>
           <a target="_blank" rel="noopener" href="/" title="Kubeapps. This link will open in a new tab">
-            <img class="footer-logo" src="/img/kubeapps-logo.svg" alt="Kubeapps logo" />
+            <img class="footer-logo" src="img/kubeapps-logo.svg" alt="Kubeapps logo" />
           </a>
         </p>
       </div>
@@ -43,7 +43,7 @@
         <span>
           <a target="_blank" rel="noopener" title="VMware by Broadcom. This link will open in a new tab"
             href="https://github.com/vmware/">
-            <img class="footer-logo" src="/img/vmware-broadcom-logo.svg" alt="VMware by Broadcom logo" />
+            <img class="footer-logo" src="img/vmware-broadcom-logo.svg" alt="VMware by Broadcom logo" />
           </a>
         </span>
         <span>
