--- a/site/themes/template/layouts/partials/base-header.html
+++ b/site/themes/template/layouts/partials/base-header.html
@@ -14,15 +14,15 @@
       <li><a target="_blank" rel="noopener" href="{{ .Site.Params.github_url }}" title="GitHub. This link will open in a new tab"><img class="logo" alt="GitHub logo" src="/img/github.svg" />GitHub</a></li>
     </ul>
     <button type="button" class="mobile" onclick="mobileNavToggle()">
-      <img class="collapsed-icon" src="/img/hamburger.svg" alt="Mobile nav icon">
-      <img class="expanded-icon" src="/img/close.svg" alt="Mobile nav icon">
+      <img class="collapsed-icon" src="img/hamburger.svg" alt="Mobile nav icon">
+      <img class="expanded-icon" src="img/close.svg" alt="Mobile nav icon">
     </button>
     <div id="mobile-menu" class="mobile-menu mobile">
       <ul class="header-links">
-        <li><a href="/" {{ if (eq .RelPermalink "/" ) }} class="active" {{ end }}>Home</a></li>
-        <li><a href="/community/" {{ if (eq .RelPermalink "/community/" ) }} class="active" {{ end }}>Community</a></li>
-        <li><a href="/resources/" {{ if (eq .RelPermalink "/resources/" ) }} class="active" {{ end }}>Resources</a></li>
-        <li><a href="/docs/{{ $latest }}" {{ if (eq .Page.Section "docs" ) }} class="active" {{ end }}>Documentation</a></li>
+        <li><a href="./" {{ if (eq .RelPermalink "/" ) }} class="active" {{ end }}>Home</a></li>
+        <li><a href="community/" {{ if (eq .RelPermalink "/community/" ) }} class="active" {{ end }}>Community</a></li>
+        <li><a href="resources/" {{ if (eq .RelPermalink "/resources/" ) }} class="active" {{ end }}>Resources</a></li>
+        <li><a href="docs/{{ $latest }}" {{ if (eq .Page.Section "docs" ) }} class="active" {{ end }}>Documentation</a></li>
       </ul>
       <div class="social">
         <a target="_blank" rel="noopener" href="{{ .Site.Params.twitter_url }}" title="X. This link will open in a new tab"><img class="logo" alt="X logo" src="/img/twitter.svg" />X</a>
