add warning to site

--- a/site/themes/template/layouts/partials/base-getting-started.html
+++ b/site/themes/template/layouts/partials/base-getting-started.html
@@ -9,7 +9,7 @@
       </p>
     </div>
     <div class="right-side">
-      <a href="/docs/{{ $latest }}" class="button">Read the docs</a>
+      <a href="docs/{{ $latest }}" class="button">Read the docs</a>
     </div>
   </div>
 </aside>
