--- a/site/themes/template/layouts/partials/use-cases.html
+++ b/site/themes/template/layouts/partials/use-cases.html
@@ -33,17 +33,13 @@
 
   <div class="grid two">
     <div class="col image">
-      <img alt="Square with three little and connected squares" src="/img/administration.svg" />
+      <img alt="Square with three little and connected squares" src="img/administration.svg" />
     </div>
     <div class="col text">
       <p class="strong">Step 1: Install Kubeapps (for demo purposes)</p>
       <div class="home-snippet">
             {{ highlight `
-  helm repo add bitnami https://charts.bitnami.com/bitnami
-    ` "" "" }}
-
-            {{ highlight `
-  helm install -n kubeapps --create-namespace kubeapps bitnami/kubeapps
+helm install -n kubeapps --create-namespace oci://ghcr.io/sap/kubeapps/kubeapps
     ` "" "" }}
       </div>
     </div>
@@ -57,13 +53,13 @@
 
       <div class="home-snippet">
         {{ highlight `
-  kubectl create --namespace default serviceaccount kubeapps-operator
+kubectl create --namespace default serviceaccount kubeapps-operator
     ` "bash" "" }}
       </div>
 
       <div class="home-snippet">
         {{ highlight `
-  kubectl create clusterrolebinding kubeapps-operator --clusterrole=cluster-admin --serviceaccount=default:kubeapps-operator
+kubectl create clusterrolebinding kubeapps-operator --clusterrole=cluster-admin --serviceaccount=default:kubeapps-operator
     ` "bash" "" }}
       </div>
 
@@ -84,24 +80,24 @@
 
       <div class="home-snippet">
         {{ highlight `
-  kubectl get --namespace default secret kubeapps-operator-token -o go-template='{{.data.token | base64decode}}'
+kubectl get --namespace default secret kubeapps-operator-token -o go-template='{{.data.token | base64decode}}'
         ` "bash" "" }}
       </div>
 
     </div>
       <div class="col image">
-        <img alt="Business card" src="/img/authentication.svg" />
+        <img alt="Business card" src="img/authentication.svg" />
       </div>
     </div>
     <div class="grid two">
       <div class="col image">
-        <img alt="Icon user inside a shield" src="/img/security.svg" />
+        <img alt="Icon user inside a shield" src="img/security.svg" />
       </div>
       <div class="col text">
         <p class="strong">Step 3: Start the Kubeapps Dashboard</p>
       <div class="home-snippet">
         {{ highlight `
-  kubectl port-forward -n kubeapps svc/kubeapps 8080:80
+kubectl port-forward -n kubeapps svc/kubeapps 8080:80
         ` "" "" }}
       </div>
         <p><a target="_blank" rel="noopener" title="This link will open in a new tab" href="http://localhost:8080"
